Fix blog entry spacing

--- a/Koral/src/styles/components/pages/_blog.scss
+++ b/Koral/src/styles/components/pages/_blog.scss
@@ -77,6 +77,7 @@
   justify-content: flex-start;
   align-items: center;
   text-align: center;
+  margin: 0 1em;
   width: 400px;
   height: 550px;
 
